# athletics-ni-api

./: .gitignore  package.json  result.json
api/: .gitignore  package.json  serverless.yml
api/.serverless/: cloudformation-template-update-stack.json  serverless-state.json
api/src/: index.js  races.js
scraper/: Dockerfile  foo.csv  pyproject.toml  task-definition.json
scraper/src/: index.py  pdf_downloader.py  pdf_parser.py  persistence.py
src/: index.js
